--- a/public/index.css
+++ b/public/index.css
@@ -4,9 +4,10 @@ body {
 
 * {
     color: #080808;
-    font-family: Lato sans-serif;
-    font-size: 13px;
+    font-family: Lato, sans-serif;
+    font-size: 12px;
     box-sizing: border-box;
+    letter-spacing: .7px;
     padding: 0;
     margin: 0;
     font-weight: 400;
