--- a/src/components/layout/home_page/main_post_list/mainpostlist.module.scss
+++ b/src/components/layout/home_page/main_post_list/mainpostlist.module.scss
@@ -1,4 +1,6 @@
 .main-post-list {
+    min-width: 0;
+
     .post {
         background-color: #fff;
         text-align: center;
@@ -6,7 +8,6 @@
 
         &-image {
             width: 100%;
-
         }
 
         &-text {
