--- a/src/components/layout/home_page/side_bar/sidebar.module.scss
+++ b/src/components/layout/home_page/side_bar/sidebar.module.scss
@@ -1,4 +1,6 @@
 .sidebar {
+    min-width: 0;
+
     @media (min-width: 768px) { 
         padding: 0 15px 0 30px; 
     }
@@ -34,7 +36,7 @@
             margin-bottom: 15px;
         }
 
-        p {
+        p, span {
             max-width: 260px;
             margin: 0 auto;
             font-size: 15px;
@@ -81,29 +83,36 @@
     .section-popular-posts {
         margin-bottom: 64px;
 
-        .post {
-            // display: grid;
-            // grid-template-columns: 1fr 1.5fr;
-            display: flex;
-            justify-content: flex-start;
-        
-            .post-image {   
-                opacity: .9;
-                height: auto;
-                max-width: 100%;
-            }
+        .popular-posts {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-gap: 10px 10px;
 
-            .post-text {
-                padding-left: 20px;
-                
-                .post-title {
-                    font-size: 18px;
-                    font-family: Amiri, sans-serif
+            .post {
+
+                display: flex;
+                justify-content: flex-start;
+                min-width: 0;
+            
+                .post-image {   
+                    opacity: .9;
+                    height: auto;
+                    max-height: 80px;
+                    max-width: 100%;
                 }
-
-                .post-date {
-                    font-style: italic;
-                    color: #9C9C9C;
+    
+                .post-text {
+                    padding-left: 20px;
+                    
+                    .post-title {
+                        font-size: 18px;
+                        font-family: Amiri, sans-serif
+                    }
+    
+                    .post-date {
+                        font-style: italic;
+                        color: #9C9C9C;
+                    }
                 }
             }
         }
@@ -114,13 +123,12 @@
         .insta-images {
             display: grid;
             grid-template-columns: 1fr 1fr 1fr 1fr;
-            grid-auto-rows: auto;
             grid-gap: 10px 10px; 
 
             .image-wrapper {
+                min-width: 0;
                 position: relative;
                 max-width: 82px;
-                display: block;
 
                 .image-hover {
                     opacity: 0;
@@ -142,7 +150,7 @@
                 }
 
                 .insta-image {
-                    vertical-align: middle;
+                    width: 100%;
                 }
 
                 &:hover {
