--- a/src/components/layout/navbar/navbar.module.scss
+++ b/src/components/layout/navbar/navbar.module.scss
@@ -4,6 +4,17 @@
     padding: 30px 80px;
     background-color: #fff;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.1);
+    overflow: hidden;
+    z-index: 1000;
+
+    @media (max-width: 767px) {
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        padding: 20px 40px;
+    }
+
     .navbar-links {
 
         .link {
@@ -23,8 +34,39 @@
         }
     }
 
-    .navbar-social-links {
+    .navbar-links--mobile {
+        position: fixed;
+        left: 0;
+        top: 65px;
+        width: 100%;
+        height: 400px;
 
+        .link {
+            width: 100%;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            transition: all .2s;
+            padding: 18px 0;
+            border-top: 1px solid #e9e9e9;
+            text-align: center;
+            background-color: #fff;
+
+            &:last-child {
+                border-bottom: 1px solid #e9e9e9;
+            }
+
+            &:hover {
+                background-color: #080808;
+
+                a {
+                    color: #e67272;
+                }
+            }
+        }
+    }
+
+    .navbar-social-links {
+        padding-top: 5px;
 
         .social-link {
             display: inline-block;
@@ -74,5 +116,64 @@
                 
             }
         }
+    }
+
+}
+
+.icon {
+    width: 25px;
+    height: 25px;
+    background-size: cover;
+
+    &--menu {
+        cursor: pointer;
+        background-image: url('../../../commons/images/menu.svg');
+    }
+}
+
+//animation
+.slide-appear {
+    opacity: 0.01;
+  }
+  
+.slide-appear.slide-appear-active {
+    opacity: 1;
+    transition: all 2s ease-in;
+}
+
+// .nav-enter {
+//     opacity: 0.01;
+//   }
+  
+//   .nav-enter.nav-enter-active {
+//     opacity: 1;
+//     transition: opacity 300ms ease-in;
+//   }
+  
+//   .nav-leave {
+//     opacity: 1;
+//   }
+  
+//   .nav-leave.nav-leave-active {
+//     opacity: 0.01;
+//     transition: opacity 300ms ease-in;
+//   }
+
+
+.slide-enter {
+    transform: translateY(-100%);
+    transition: all 2000s;
+
+    &.nav-enter-active {
+      transform: translateY(0%);
+    }
+  }
+  
+.slide-leave {
+    transform: translateY(0%);
+    transition: all 2000s;
+
+    &.slide-leave-active {
+        transform: translateY(-100%);
     }
 }
