--- a/src/components/layout/create_post_page/create_form.module.scss
+++ b/src/components/layout/create_post_page/create_form.module.scss
@@ -18,11 +18,11 @@
     }
 
     .form {
-        margin-bottom: 60px;
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 20%;
+        margin: 60px auto;
+        // position: absolute;
+        // left: 50%;
+        // transform: translateX(-50%);
+        width: 25%;
 
         @media (max-width: 1024px) {
             width: 50%;
