--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,30 @@
+body {
+    background-color: #f7f7f7;
+}
+
+* {
+    color: #080808;
+    font-family: Lato, sans-serif;
+    font-size: 12px;
+    box-sizing: border-box;
+    letter-spacing: .7px;
+    padding: 0;
+    margin: 0;
+    font-weight: 400;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
+}
+
+textarea:focus, input:focus {
+    outline: none;
+}
+
 .App {
-
-
+    min-height: 100vh;
 }
